var searchData=
[
  ['p1c_5fargs_5ft',['p1c_args_t',['../structp1c__args__t.html',1,'']]],
  ['p1cevent',['P1CEvent',['../classP1CEvent.html',1,'']]],
  ['p2c_5fargs_5ft',['p2c_args_t',['../structp2c__args__t.html',1,'']]],
  ['p2cevent',['P2CEvent',['../classP2CEvent.html',1,'']]],
  ['phaseonecommitreply',['PhaseOneCommitReply',['../classmvtkvs_1_1PhaseOneCommitReply.html',1,'mvtkvs']]],
  ['phaseonecommitrequest',['PhaseOneCommitRequest',['../classmvtkvs_1_1PhaseOneCommitRequest.html',1,'mvtkvs']]],
  ['phaseonecommitrequesthandler',['PhaseOneCommitRequestHandler',['../classGRPCClient_1_1PhaseOneCommitRequestHandler.html',1,'GRPCClient']]],
  ['phaseonecommitrequesthandler',['PhaseOneCommitRequestHandler',['../classGRPCServer_1_1PhaseOneCommitRequestHandler.html',1,'GRPCServer']]],
  ['phasetwocommitreply',['PhaseTwoCommitReply',['../classmvtkvs_1_1PhaseTwoCommitReply.html',1,'mvtkvs']]],
  ['phasetwocommitrequest',['PhaseTwoCommitRequest',['../classmvtkvs_1_1PhaseTwoCommitRequest.html',1,'mvtkvs']]],
  ['phasetwocommitrequesthandler',['PhaseTwoCommitRequestHandler',['../classGRPCServer_1_1PhaseTwoCommitRequestHandler.html',1,'GRPCServer']]],
  ['phasetwocommitrequesthandler',['PhaseTwoCommitRequestHandler',['../classGRPCClient_1_1PhaseTwoCommitRequestHandler.html',1,'GRPCClient']]]
];
